Fix tests and build after merging main